--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,83 @@
 {% extends "bootstrap_base.html" %}
 
+{% block title %}
+抽奖程序
+{% endblock title %}
+
 {% block body %}
-<input type="text" value="">
-<input type="submit" value="abc" class="btn">
+<div class="container">
+<h1>“搜狗杯”智能体大赛现场总决赛 观众抽奖</h1>
+
+<ul class="nav nav-tabs">
+  <li id="p3" class="active">
+    <a href="#">三等奖</a>
+  </li>
+  <li id="p2"><a href="#">二等奖</a></li>
+  <li id="p1"><a href="#">一等奖</a></li>
+  <li id="p0"><a href="#">特等奖</a></li>
+</ul>
+<div class="row">
+    <img id="show-img" src="static/img/3.pic.jpg" height="300pt" class="img-circle">
+</div>
+
+<div class="row">
+    <input type="text" id="oknum" name="oknum" value="000" />
+</div>
+<div class="row">
+    <button class="btn" onclick="start()">开始</button>
+</div>
+</div>
+
+<script>
+var alldataarr = [], max_num = 100;
+for (var i = 1; i <= max_num; ++i)
+    alldataarr.push(pad(i, 3));
+var timer, result = true;
+function change(){
+    $('#oknum').val(alldataarr[GetRnd(0,alldataarr.length)]);
+}
+function start(){
+    clearInterval(timer);
+    if (result == true) {
+        timer = setInterval('change()', 30);
+        $.ajax({ url: '/random/' + max_num, success: function(data) {
+                result = data;
+            }});
+    } else {
+        $('#oknum').val(result);
+        result = true;
+    }
+}
+function GetRnd(min, max){
+    return parseInt(Math.random()*(max-min));
+}
+function pad(num, n) {
+    var len = num.toString().length;
+    while(len < n) {
+        num = "0" + num;
+        len++;
+    }  
+    return num;
+}
+
+$("li").click(function() {
+    var id = $(this).attr("id");
+    for (var i = 0; i <= 3; ++i)
+        $('#p'+i).attr('class', '');
+    $('#'+id).attr('class', 'active');
+    var img = $('#show-img');
+    if (id == 'p0') {
+        img.attr('src', 'static/img/1.pic.jpg');
+    } else if (id == 'p1') {
+        img.attr('src', 'static/img/2.pic.jpg');
+    } else if (id == 'p2') {
+        img.attr('src', 'static/img/3.pic.jpg');
+    } else if (id == 'p3') {
+        img.attr('src', 'static/img/4.pic.jpg');
+    }
+});
+
+</script> 
+
 {% endblock body %}
 
