modify web page

--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -14,6 +14,8 @@
     <!--<script src="/static/jquery-json.js"></script> -->
     {%- block style %}
     <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+
+    <link href="{{url_for('static', filename='css/buttons.css')}}" rel="stylesheet">
     <!--
     <link href="{{url_for('static', filename='css/mycss.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='css/font-awesome.min.css')}}" rel="stylesheet">
